Moved to paper Simpler structure